--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@
     --body: #1E3250;
     --green: #66CDA3;
     --white: #fff;
+    --orange: #fca311;
 }
-
-/* #f07167 */
-
 
 *,
 *::before,
@@ -24,7 +22,7 @@ body {
 
 .header {
     display: flex;
-    background-color: #66CDA3;
+    background-color: var(--green);
     justify-content: space-around;
     align-items: center;
     height: 10vh;
@@ -45,7 +43,7 @@ body {
   font-size: 32px;
   padding-right: 14px;
   padding-left: 14px;
-  border: 4px solid #1E3250;
+  border: 4px solid var(--body);
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -54,19 +52,92 @@ body {
 }
 
 .add_new_book:hover {
-    background-color: #fca311;
-    color: #fff;
-    border-color: #fff;
+    background-color: var(--orange);
+    color: var(--white);
+    border-color: var(--white);
 
 }
 
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+}
 
-.library_content {
-    margin: 0 auto;
-    width: 1080px;
-    height: 100vh;
+.popup_content {
+    min-height: 100%;
     display: flex;
-    border: 3px solid red;
+    align-items: center;
+    justify-content: center;
+}
+
+.container {
+    background-color: var(--green);
+    padding: 40px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.container h1 {
+    font-size: 3em;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+.form_control {
+    margin-bottom: 10px;
+}
+
+input[type='text'], input[type='number'] {
+    width: 100%;
+    padding: 15px 15px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    outline: none;
+}
+input::placeholder {
+    font-size: 1.5em; 
+    color: var(--body);
+}
+
+.form_control label {
+    font-size: 1.5em;
+}
+
+.book_status {
+    display: flex;
+    justify-content: center;
+    margin: 15px;
+}
+
+input[type="checkbox"]{
+    height: 18px;
+    width: 18px;
 
 }
 
+.btn {
+    width: 100%;
+    padding: 10px 15px;
+    background-color: var(--body);
+    color: var(--white);
+    font-size: 1.2em;
+    border: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
