--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     --green: #66CDA3;
     --white: #fff;
     --orange: #fca311;
+    --red:  #da9797;
+    --yellow:  #ffe499;
 }
 
 *,
@@ -142,16 +144,81 @@ input[type="checkbox"]{
 
 }
 
-.btn {
+.submit_btn {
     width: 100%;
     padding: 10px 15px;
     background-color: var(--body);
     color: var(--white);
     font-size: 1.2em;
+    cursor: pointer;
     border: none;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+}
+
+.library_content {
+    width: 60vw;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.book_container {
+    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    gap: 20px;
+}
+
+
+.book_info {
+    padding: 30px;
+    height: 300px;
+    font-size: 1.5rem;
+    border: 2px solid var(--white);
+    background-color: var(--green);
+    display: flex;
+    flex-direction: column;
+}
+
+.book_info h2, .book_info h3 {
+    margin-bottom: 10px;
+    /* text-decoration: underline; */
+    text-align: center;
+}
+
+.control {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.control button {
+    color: var(--white);
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+.control .read {
+    background-color: var(--yellow);
+    color: var(--body);
+    
+}
+
+.control .remove {
+    background-color: var(--red);
+    color: var(--body);
+
 }
