--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ body {
 
 .add_new_book {
   font-size: 32px;
-  padding-right: 14px;
-  padding-left: 14px;
+  padding-right: 13px;
+  padding-left: 13px;
   border: 4px solid var(--body);
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -168,42 +168,31 @@ input[type="checkbox"]{
 .book_container {
     padding: 30px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     justify-content: center;
-    gap: 20px;
+    gap: 25px;
 }
 
 
 .book_info {
     padding: 30px;
-    height: 300px;
-    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 25px;
+    font-size: 1.3rem;
     border: 2px solid var(--white);
     background-color: var(--green);
-    display: flex;
-    flex-direction: column;
+    
 }
 
-.book_info h2, .book_info h3 {
-    margin-bottom: 10px;
-    /* text-decoration: underline; */
-    text-align: center;
-}
 
-.control {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.control button {
+.book_info button {
     color: var(--white);
     font-size: 1rem;
     border: none;
     outline: none;
     padding: 10px 15px;
-    margin-bottom: 10px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -211,14 +200,37 @@ input[type="checkbox"]{
     -o-border-radius: 5px;
 }
 
-.control .read {
+.book_info .read {
     background-color: var(--yellow);
     color: var(--body);
     
 }
 
-.control .remove {
+.book_info .remove {
     background-color: var(--red);
     color: var(--body);
 
+}
+
+@media (max-width: 1465px) {
+    .book_container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 900px) {
+    .book_container {
+      grid-template-columns: repeat(1, 250px);
+    }  
+}
+
+@media (max-width: 800px) {
+    .header {
+        height: 12vh;
+    }
+    .add_new_book {
+        font-size: 28px;
+        padding-right: 10px;
+        padding-left: 10px;
+    }   
 }
